@@ -4,6 +4,9 @@
 =======================================================
 
 
+Apr 10 2010      Test suite further cleaned. explicit check on ETSF-IO support 
+                 added. (AF)
+
 Apr 09 2010      Cleanup of hamiltonian data in trnasport. 
                  test12 updated, including references. 
                  Bug fixed in configure when issued with --with-etsf-io flag. 
